--- a/package.json
+++ b/package.json
@@ -18,28 +18,12 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
+    "browserslist": [],
     "devDependencies": {
         "esbuild": "^0.14.1",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.2",
+        "typescript-eslint": "^0.0.1-alpha.0",
         "xhr2": "^0.2.1",
         "xmlhttprequest": "^1.8.0"
     }
