--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "axios": "^0.24.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-native-calendar-picker": "^7.1.2",
         "react-scripts": "4.0.3",
+        "react-simple-maps": "^2.3.0",
+        "react-usa-map": "^1.5.0",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
