--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-scripts": "4.0.3",
         "react-simple-maps": "^2.3.0",
         "react-usa-map": "^1.5.0",
+        "recharts": "^2.1.6",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
