--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-hooks-use-modal": "^2.1.0",
         "react-native-calendar-picker": "^7.1.2",
         "react-scripts": "4.0.3",
         "react-simple-maps": "^2.3.0",
         "react-usa-map": "^1.5.0",
         "recharts": "^2.1.6",
+        "sweetalert": "^2.1.2",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
