--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "axios": "^0.24.0",
+        "bootstrap": "^5.1.3",
         "moment": "^2.29.1",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.0.3",
         "react-dom": "^17.0.2",
         "react-hooks-use-modal": "^2.1.0",
         "react-native-calendar-picker": "^7.1.2",
